--- a/bt2092/exam1.html
+++ b/bt2092/exam1.html
@@ -12,31 +12,40 @@
 <body>
 
     <div class="main">
-        <h2>Đăng nhập hệ thống</h2>
+        <h1>Đăng nhập hệ thống</h1>
         <div class="text">
             <div class="forrm">
                 <img src="login.png" width="70%">
             </div>
-            <div>
-                <form id="myform" action="#">
-                    <div class="form">
-                        <p><label>Tài khoản</label>
-                            <input type="true" name="name" id="name">
-                        </p>
-                        <p>
-                            <label>Mật khẩu</label>
-                            <input type="password" name="pass" id="pass">
-                        </p>
+            <div class="form2">
+                <form method="post">
+                    <div class="group">
+                        <label>Tài khoản</label>
+                        <input required type="true" name="name" id="name">
                     </div>
-                    <div class="end">
+                    <div class="group">
+                        <label>Mật khẩu</label>
+                        <input required type="password" name="pass" id="pass">
+                    </div>
+                    <div class="group">
                         <label></label>
-                        <button type="submit" onclick="Submit()">Đăng nhập</button>
-                        <button type="reset" onclick="Reset()">Nhập lại</button>
+                        <button type="button" onclick="Submit()">Đăng nhập</button>
+                        <button type="reset">Nhập lại</button>
                     </div>
+                </form>
             </div>
         </div>
+    </div>
 
-        </form>
+    <div class="popup" id="popup_id">
+        <div class="popup-content">
+            <div class="msg">
+                ĐĂNG NHẬP THÀNH CÔNG
+            </div>
+            <div class="footer">
+                <button onclick="hidePopup()">OK</button>
+            </div>
+        </div>
     </div>
     <script src="exam1.js"></script>
 </body>
